--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
             box-shadow: 2px 2px 12px #aaa;
             background-color: #f9f9f9; /* A light background color for the boxes */
         }
-        
+
     </style>
 </head>
 <body>
@@ -104,6 +104,7 @@
     <nav>
         <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('settings') }}">Settings</a>
+        <a href="{{ url_for('alerts') }}">Alerts</a>
     </nav>
     <div class="boxed-section">
         {% for ticker, plans in data.items() %}
