--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -6,50 +6,57 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
+            background-color: #2c2c2c; /* Changed to dark background */
+            color: #e5e5e5; /* Light text color for dark mode */
             margin: 0;
             padding: 0;
         }
-
+    
         h2 {
             text-align: center;
         }
-
+    
         .container {
             width: 50%;
             margin: auto;
         }
-
+    
         header {
-            background: #50b3a2;
+            background: #1f1f1f; /* Darker shade for header */
             color: #ffffff;
             text-align: center;
             padding: 1em;
         }
-
+    
         nav {
             display: flex;
             justify-content: space-around;
-            background: #333;
+            background: #1f1f1f; /* Same as header */
         }
-
+    
         nav a {
             color: white;
             text-decoration: none;
             text-align: center;
             padding: 1em;
         }
-
+    
+        nav a:hover {
+            background-color: #404040;
+        }
+    
         .boxed-section {
             width: 80%;
             max-width: 600px;
             padding: 20px;
             margin: 20px auto;
-            border: 1px solid #ccc;
-            box-shadow: 2px 2px 12px #aaa;
-            background-color: #f9f9f9;
+            border: 1px solid #444;
+            box-shadow: 2px 2px 12px #111;
+            background-color: #383838;
+            max-height: 500px;
+            overflow-y: auto;
         }
-
+    
         .clear-all {
             background-color: red;
             color: white;
@@ -57,28 +64,27 @@
             border: none;
             cursor: pointer;
             float: right;
-            margin-bottom: 20px; /* Add this line */
+            margin-bottom: 20px;
         }
-
-
+    
         @media(max-width: 768px) {
             .container {
                 width: 95%;
             }
         }
-
+    
         ul {
             list-style-type: none;
             padding: 0;
         }
-
+    
         li {
             padding: 10px;
-            border: 1px solid #ddd;
+            border: 1px solid #444; /* Dark border for list items */
             margin: 5px 0;
-            background-color: #fff;
+            background-color: #303030; /* Dark background for list items */
         }
-    </style>
+    </style>    
 </head>
 <body>
     <header>
