--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Tradingview Alerts</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
+            background-color: #181818;
+            /* Dark background for the body */
+            color: #e0e0e0;
+            /* Light color for the main text */
             margin: 0;
             padding: 0;
         }
@@ -17,7 +22,8 @@
         }
 
         header {
-            background: #50b3a2;
+            background: #2d2d2d;
+            /* Slightly lighter dark shade for the header */
             color: #ffffff;
             text-align: center;
             padding: 1em;
@@ -26,14 +32,21 @@
         nav {
             display: flex;
             justify-content: space-around;
-            background: #333;
+            background: #232323;
+            /* Darker shade for the navigation */
         }
 
         nav a {
-            color: white;
+            color: #b8b8b8;
+            /* Light gray for navigation links */
             text-decoration: none;
             text-align: center;
             padding: 1em;
+        }
+
+        nav a:hover {
+            color: #ffffff;
+            /* Slightly brighter color on hover */
         }
 
         table {
@@ -41,62 +54,100 @@
             border-collapse: collapse;
         }
 
-        th, td {
+        th,
+        td {
             padding: 8px;
             text-align: left;
-            border-bottom: 1px solid #ddd;
+            border-bottom: 1px solid #333;
+            /* Dark border for table cells */
         }
 
         th {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #333;
+            /* Darker background for table headers */
+            color: #e0e0e0;
+            /* Lighter text for table headers */
         }
 
         tr:hover {
-            background-color: #f5f5f5;
+            background-color: #232323;
+            /* Slightly lighter shade for hover effect on table rows */
         }
 
-        .group {
+        .plan-card {
+            position: relative;
+            padding: 10px;
             margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background-color: #202020;
+            /* Dark background for each card */
         }
 
-        @media(max-width: 768px) {
-            .container {
-                width: 95%;
-            }
-        }
         .delete-link {
-            color: red;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: #888;
             text-decoration: none;
-            padding-left: 10px;
             cursor: pointer;
+            transition: color 0.3s;
         }
+
+        .reset-button,
+        .status-symbol {
+            color: #b8b8b8;
+            /* Light gray for icons and buttons */
+        }
+
+        .delete-link:hover,
+        .reset-button:hover {
+            color: #ffffff;
+            /* White color for hover effect */
+        }
+
         .error {
-            color: red;
+            color: #ff5555;
+            /* Bright red for errors */
             font-weight: bold;
-            background-color: #ffe6e6;
-            padding: 10px; 
-            margin: 5px 0; 
-            border: 1px solid #ff0000; 
-            border-radius: 5px; 
+            background-color: #2d2d2d;
+            /* Dark background for error messages */
+            padding: 10px;
+            margin: 5px 0;
+            border: 1px solid #ff5555;
+            /* Bright red border for error messages */
+            border-radius: 5px;
         }
+
         .checkmark {
-            color: green;
-            font-weight: bold;
+            color: #55ff55;
+            /* Bright green for checkmarks */
         }
 
         .boxed-section {
-            width: 80%; /* Adjust this value based on your preference */
-            max-width: 600px; /* This ensures the boxes don't get too wide on large screens */
+            width: 80%;
+            max-width: 600px;
             padding: 20px;
-            margin: 20px auto; /* 'auto' left and right margins center the boxes */
-            border: 1px solid #ccc;
-            box-shadow: 2px 2px 12px #aaa;
-            background-color: #f9f9f9; /* A light background color for the boxes */
+            margin: 20px auto;
+            border: 1px solid #333;
+            /* Dark border for the main boxed section */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            background-color: #202020;
+            /* Dark background for the boxed section */
         }
 
+        .reset-button {
+            background-color: #ff5555;
+            /* Bright red for the reset button */
+            color: #ffffff;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-right: 5px;
+        }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Tradingview Alerts</h1>
@@ -108,49 +159,58 @@
     </nav>
     <div class="boxed-section">
         {% for ticker, plans in data.items() %}
-            <div class="group">
-                <h2>{{ ticker }}</h2>
-                {% for plan, details in plans.items() %}
-                    <h3>
-                        Plan: {{ plan }}
-                        <a href="{{ url_for('delete_plan', ticker=ticker, plan=plan) }}" class="delete-link">X</a>
-                    </h3>
-                    <table>
-                        <tr>
-                            <th>Stage Description</th>
-                            <th>Current Stage</th>
-                        </tr>
-                        {% for stage, status, sequence in details['stages'] %}
-                            <tr>
-                                <td>{{ stage }}</td>
-                                <td id="{{ ticker }}-{{ plan }}-{{ stage }}-status"> <!-- Unique ID assigned to each status element -->
-                                    {{ status }}
-                                    <span class="status-symbol" {% if status != 'completed' %}style="display:none"{% endif %}>
-                                        {% if details['errors'] %} 
-                                            <span style="color:red;">✖</span> <!-- Out of order -->
-                                        {% else %}
-                                            <span style="color:green;">✔</span> <!-- Correct order -->
-                                        {% endif %}
-                                    </span>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </table>                    
-                    {% if details['errors'] %}
-                        <ul class="error-list">
-                            {% for error in details['errors'] %}
-                                <li class="error">{{ error }}</li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
+        {% for plan, details in plans.items() %}
+        <div class="plan-card">
+            <h2>{{ ticker }}</h2>
+            <!-- Delete Icon in the upper right corner -->
+            <a href="{{ url_for('delete_plan', ticker=ticker, plan=plan) }}" class="delete-link" title="Delete Plan">
+                <i class="fas fa-trash-alt"></i>
+            </a>
+            <h3>
+                Plan: {{ plan }}
+                <form action="{{ url_for('reset_stages') }}" method="post" style="display: inline;">
+                    <input type="hidden" name="ticker" value="{{ ticker }}">
+                    <input type="hidden" name="plan" value="{{ plan }}">
+                    <button type="submit" class="reset-button">Reset Stage</button>
+                </form>
+            </h3>
+            <table>
+                <tr>
+                    <th>Stage Description</th>
+                    <th>Current Stage</th>
+                </tr>
+                {% for stage, status, sequence in details['stages'] %}
+                <tr>
+                    <td>{{ stage }}</td>
+                    <td id="{{ ticker }}-{{ plan }}-{{ stage }}-status">
+                        <!-- Unique ID assigned to each status element -->
+                        {{ status }}
+                        <span class="status-symbol" {% if status !='completed' %}style="display:none" {% endif %}>
+                            {% if details['errors'] %}
+                            <span style="color:red;">✖</span> <!-- Out of order -->
+                            {% else %}
+                            <span style="color:green;">✔</span> <!-- Correct order -->
+                            {% endif %}
+                        </span>
+                    </td>
+                </tr>
                 {% endfor %}
-            </div>
+            </table>
+            {% if details['errors'] %}
+            <ul class="error-list">
+                {% for error in details['errors'] %}
+                <li class="error">{{ error }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </div>
+        {% endfor %}
         {% endfor %}
     </div>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            document.querySelectorAll('.delete-link').forEach(function(link) {
-                link.addEventListener('click', function(event) {
+        document.addEventListener('DOMContentLoaded', function () {
+            document.querySelectorAll('.delete-link').forEach(function (link) {
+                link.addEventListener('click', function (event) {
                     event.preventDefault();
                     if (confirm('Are you sure you want to delete this plan?')) {
                         fetch(link.href, { method: 'POST' })
@@ -169,16 +229,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"></script>
     <script type="text/javascript">
         var socket = io.connect();
-        socket.on('connect', function() {
+        socket.on('connect', function () {
             console.log('Connected to Server');
         });
-        socket.on('stage_updated', function(data) {
+        socket.on('stage_updated', function (data) {
             console.log('Stage Updated:', data);
-                    
+
             // Constructing the unique ID for the stage status element
             var elementId = data.ticker + '-' + data.plan + '-' + data.stage + '-status';
             var element = document.getElementById(elementId);
-                    
+
             if (element) {
                 // Update the text content and the visibility of the status symbol
                 element.textContent = data.status;
@@ -197,6 +257,7 @@
             }
         });
 
-    </script>      
+    </script>
 </body>
+
 </html>
